Fixed height of calendar so it doesnt exceed screen height on mobile due to address bar

--- a/master.css
+++ b/master.css
@@ -29,7 +29,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 }
@@ -69,9 +69,10 @@ body {
 	margin:0px;
 	display: inline-block;
 	text-align: right;
-	min-height: 16.666666666666668%;
-	max-height: 16.666666666666668%;
+	min-height: 14.666666666666668%;
+	max-height: 14.666666666666668%;
 	padding: 0px;
+	outline: 1px solid #f0f0f0;
 }
 
 .calendar-block:hover {
